# elphysics

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
elphysics/: __init__.py  api.py  circuits.py  dc_solver.py  schema_validation.py  unified_verifier.py
elphysics/examples/: broken_circuit.json  dc_circuit.json  dc_circuit_analysis.json  ea_circuit_design.py  fixed_circuit.json  qa_generator_type1.py  qa_generator_type2.py  rl_circuit_repair.py
elphysics/rules/: dc_analysis.py
elphysics/schema/: circuit.schema.json
tests/: conftest.py  test_dc.py
